Updated styling for the responsive nav.

--- a/index.html
+++ b/index.html
@@ -15,36 +15,19 @@
   <header class="header default-primary-color">
     <nav class="nav">
       <div class="nav-item logo">
-        <a href='#' class="site-logo"><img src="images/banksy-graffiti-transparent.jpg" alt="" title="" class="site-logo" /></a>
-      </div>
-      <div class="nav-item admin">
-        <i class="fa fa-user-o fa-1x" aria-hidden="true"></i>Admin Username<i class="fa fa-caret-square-o-down fa-1x" aria-hidden="true"></i>
-      </div>
-      <div class="nav-item share">
-        <i class="fa fa-share-alt" aria-hidden="true"></i><span class="nav-items"> Share</span>
-      </div>
-      <div class="nav-item crew">
-        <i class="fa fa-users fa-1x" aria-hidden="true"> </i><span class="nav-items"> The Banksy Crew</span>
-      </div>
-      <div class="nav-item film">
-        <i class="fa fa-film fa-1x" aria-hidden="true"> </i><span class="nav-items"> Film History</span>
-      </div>
+        <a href='#' class="site-logo"><img src="images/banksy_ratstar.gif" alt="" title="" class="site-logo" /></a>
+        <span><i class="fa fa-user-o fa-1x" aria-hidden="true"></i>Admin Username<i class="fa fa-caret-square-o-down fa-1x" aria-hidden="true"></i></span>
 
-
-      <!-- <div class="user-nav">
-        <i class="fa fa-user-o fa-1x" aria-hidden="true"></i>Admin Username<i class="fa fa-caret-square-o-down fa-1x" aria-hidden="true"></i>
       </div>
-
-      <div class="site-nav">
-        <span><i class="fa fa-share-alt" aria-hidden="true"></i><span class="nav-item"> Share</span>
-        <i class="fa fa-users fa-1x" aria-hidden="true"> </i><span class="nav-item"> The Banksy Crew</span>
-        <i class="fa fa-film fa-1x" aria-hidden="true"> </i><span class="nav-item"> Film History</span></span>
-        <a href='#' class="site-logo"><img src="images/banksy-graffiti-transparent.jpg" alt="" title="" class="site-logo" /></a>
-      </div> -->
+      <div class="nav-item navbar">
+        <i class="fa fa-share-alt" aria-hidden="true"><span class="nav-items"> Share</span></i>
+        <i class="fa fa-users fa-1x" aria-hidden="true"><span class="nav-items"> The Crew</span></i>
+        <i class="fa fa-film fa-1x" aria-hidden="true"><span class="nav-items"> Film History</span></i>
+      </div>
     </nav>
   </header>
   <section class="section">
-    <p class="share-title">Share</p>
+    <p class="share-title">Share Banksy</p>
     <article class="card">
       <div class="image hero-1">
         <div class="share-img">
